# Project-IRKA

./: .env.example  .gitignore  docker-compose.yaml  main.py  readme.md  requirements.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/versions/: 07adf6f1713a_initial_migration.py  5ae9ad9a6af4_added_tables_for_backfill_worker_and_.py  5c31200e25f1_initial.py  6daa68e466b2_added_monitorjob.py
backend/core/: backfill.py  backfill_worker.py  channel_utils.py  config.py  monitor.py  queue.py  security.py  subscribers.py  telegram.py  telegram_auth.py  worker.py
backend/db/: session.py  utility.py
backend/models/: __init__.py  backfill.py  channels.py  message.py  monitor.py  user.py
backend/routers/: channels.py  core.py  users.py
backend/schemas/: channel.py  channels.py  telegram.py  user.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/.angular/cache/21.2.7/frontend/: .tsbuildinfo
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts  types.ts
frontend/src/app/components/alert/: alert.html  alert.ts
frontend/src/app/components/card/: card.html  card.ts
frontend/src/app/components/modal/: modal.html  modal.ts
frontend/src/app/components/navbar/: navbar.html  navbar.ts
frontend/src/app/core/http/: apiService.ts  streamService.ts
frontend/src/app/core/state/: userState.ts
frontend/src/app/pages/channelsPage/: channels.html  channels.ts
frontend/src/app/pages/homePage/: home.html  home.ts
redis/: Dockerfile  entrypoint.sh  redis.acl.template
(+9 files in other folders)
